--- a/docs/todo.org
+++ b/docs/todo.org
@@ -6,12 +6,12 @@
 ** DONE Factory
 ** DONE Seeder
 ** DONE Controller
-* DONE Viaje [4/5]
+* DONE Viaje [5/5]
 ** DONE Migración
 ** DONE Modelo
 ** DONE Factory
 ** DONE Seeder
-** TODO Controller
+** DONE Controller
 * DONE Ciudad [5/5]
 ** DONE Migración
 ** DONE Modelo
@@ -24,97 +24,97 @@
 ** DONE Factory
 ** DONE Seeder
 ** DONE Controller
-* TODO Hotel [4/4]
+* DONE Hotel [5/5]
 ** DONE Migración
 ** DONE Modelo
 ** DONE Factory
 ** DONE Seeder
-** TODO Controller
+** DONE Controller
 * DONE Habitación [5/5]
 ** DONE Migración
 ** DONE Modelo
 ** DONE Factory
 ** DONE Seeder
 ** DONE Controller
-* TODO Vehículo [4/4]
+* DONE Vehículo [5/5]
+** DONE Migración
+** DONE Modelo
+** DONE Factory
+** DONE Seeder
+** DONE Controller
+* TODO Paquete [4/5]
 ** DONE Migración
 ** DONE Modelo
 ** DONE Factory
 ** DONE Seeder
 ** TODO Controller
-* TODO Paquete [4/4]
+* TODO Vuelo [4/5]
 ** DONE Migración
 ** DONE Modelo
 ** DONE Factory
 ** DONE Seeder
 ** TODO Controller
-* TODO Vuelo [4/4]
+* TODO Recorrido [4/5]
 ** DONE Migración
 ** DONE Modelo
 ** DONE Factory
 ** DONE Seeder
 ** TODO Controller
-* TODO Recorrido [4/4]
-** DONE Migración
-** DONE Modelo
-** DONE Factory
-** DONE Seeder
-** TODO Controller
-* TODO Pasaje [0/4]
+* TODO Pasaje [0/5]
 ** TODO Migración
 ** TODO Modelo
 ** TODO Factory
 ** TODO Seeder
 ** TODO Controller
-* TODO Compra [0/4]
+* TODO Compra [0/5]
+** TODO Migración
+** TODO Modelo
+** TODO Factory
+** TODO Seeder
+** TODO Conrtoller
+* TODO Reserva [4/5]
+** DONE Migración
+** DONE Modelo
+** DONE Factory
+** DONE Seeder
+** TODO Controller
+* TODO Usuario [0/5]
 ** TODO Migración
 ** TODO Modelo
 ** TODO Factory
 ** TODO Seeder
 ** TODO Controller
-* TODO Reserva [4/4]
-** DONE Migración
-** DONE Modelo
-** DONE Factory
-** DONE Seeder
-** TODO Controller
-* TODO Usuario [0/4]
+* TODO LogAdministrador [0/5]
 ** TODO Migración
 ** TODO Modelo
 ** TODO Factory
 ** TODO Seeder
 ** TODO Controller
-* TODO LogAdministrador [0/4]
-** TODO Migración
-** TODO Modelo
-** TODO Factory
-** TODO Seeder
-** TODO Controller
-* TODO Recorrido_Reserva [4/4]
+* DONE Recorrido_Reserva [5/5]
+** DONE Migración
+** DONE Modelo
+** DONE Factory
+** DONE Seeder
+** DONE Controller
+* TODO Habitación_Reserva (Preguntar como validar fechas con Validator) [4/5]
 ** DONE Migración
 ** DONE Modelo
 ** DONE Factory
 ** DONE Seeder
 ** TODO Controller
-* TODO Habitación_Reserva [4/4]
+* TODO Paquete_Reserva [4/5]
 ** DONE Migración
 ** DONE Modelo
 ** DONE Factory
 ** DONE Seeder
 ** TODO Controller
-* TODO Paquete_Reserva [4/4]
+* TODO Reserva_Vehículo [4/5]
 ** DONE Migración
 ** DONE Modelo
 ** DONE Factory
 ** DONE Seeder
 ** TODO Controller
-* TODO Reserva_Vehículo [4/4]
-** DONE Migración
-** DONE Modelo
-** DONE Factory
-** DONE Seeder
-** TODO Controller
-* TODO Recorrido_Vuelo [4/4]
+* TODO Recorrido_Vuelo [4/5]
 ** DONE Migración
 ** DONE Modelo
 ** DONE Factory
